[package]
name = "commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.8", features = ["derive"] }
async-process = "1.3.0"
